css/style.css
/* ... */
/* Remove default margin */
body,
h1,
h2,
h3,
h4,
p,
figure,
blockquote,
dl,
dd {
	margin: 0;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul[role='list'],
ol[role='list'] {
	list-style: none;
}

/* Set core root defaults */
html:focus-within {
	scroll-behavior: smooth;
}

/* Set core body defaults */
body {
	min-height: 100vh;
	text-rendering: optimizeSpeed;
	line-height: 1.5;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
	text-decoration-skip-ink: auto;
}

/* Make images easier to work with */
img,
picture {
	max-width: 100%;
	display: block;
}

/* Inherit fonts for inputs and buttons */
input,
button,
textarea,
select {
	font: inherit;
}

/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
@media (prefers-reduced-motion: reduce) {
	html:focus-within {
	scroll-behavior: auto;
	}

	*,
	*::before,
	*::after {
		animation-duration: 0.01ms !important;
		animation-iteration-count: 1 !important;
		transition-duration: 0.01ms !important;
		scroll-behavior: auto !important;
	}
}

/*
 * Global styles
 */

* {
	margin: 0;
	padding: 0;
}

body {
	background: linear-gradient(45deg, var(--clr-bg1) 10%, var(--clr-bg1-25) 31.25%, var(--clr-bg1-50) 52.5%, var(--clr-bg1-75) 73.75%, var(--clr-bg2) 95%) fixed;
	background-size: 250%;
	color: var(--clr-text);
	font-family: "Roboto", sans-serif;;
	font-size: var(--text-size);
	animation: bg-animation 20s infinite alternate;
	height: 100%;
	overflow-x: hidden;
}

@keyframes bg-animation {
	0% {
		background-position: bottom left;
	}
	100% {
		background-position: top right;
	}
}

.noise, .noise::after {
	position: fixed;
	width: 100%;
	height: 100%;
	z-index: -5;
	background: url(../img/noise.svg) repeat;
	mix-blend-mode: multiply;
}
.noise {
	background-position: top left;
	animation: noise-animation 19s infinite alternate;
}
.noise::after {
	content: '';
	background-position: bottom right;
	animation: noise-animation 21s infinite alternate-reverse;
}

@keyframes noise-animation {
	0% {
		background-position: top left;
	}
	100% {
		background-position: bottom right;
	}
}

/*
 * Core layout
 */

#wrapper {
	max-width: var(--content-width);
	margin: 0 auto;
	display: flex;
	flex-direction: column;
	height: 100%;
	position: relative;
	padding-inline: clamp(1rem, 8vw, 2rem);
	color: var(--clr-text);
	font-weight: 400;
}

#wrapper > *:not(.square):not(.color):not(.wedge) {
	z-index: 3;
}

/*
 * Layout & general styling
 */

#controls {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	gap: 1.2em;
	margin-block: 1.2em;
}
#controls .group {
	display: flex;
	justify-content: center;
	gap: 1.2em;
}

#logo img {
	display: inline-block;
	max-width: unset;
}

h1,
h2 {
	font-family: "Oswald", sans-serif;
	font-variant: small-caps;
	font-weight: 500;
	line-height: 1em;
	margin-bottom: 0.25em;
}

h1 {
	font-size: 3rem;
}

p {
	line-height: 1.4em;
}
p + p,
p + section,
section + section,
section + p {
	margin-top: 1em;
}

a:not(:has(img)):not(.button),
.link-placeholder {
	display: inline-block;
	position: relative;
	padding-bottom: 0.3em;
	text-decoration: none;
	color: var(--clr-link);
	transition: color var(--transition-duration) var(--transition-curve-default);
}
a:not(:has(img)):not(.button):focus,
a:not(:has(img)):not(.button):hover {
	color: var(--clr-link-active);
}
a:not(:has(img)):not(.button):focus {
	outline: none;
}
a:not(:has(img)):not(.button)::after,
.link-placeholder::after {
	content: '';
	position: absolute;
	bottom: 0.15em;
	left: 0;
	width: 100%;
	height: 0.1em;
	background: var(--clr-link-active);
	transform: scaleX(0);
	transform-origin: right;
	transition: transform var(--transition-duration) ease-in;
}
a:not(:has(img)):not(.button):hover::after,
a:not(:has(img)):not(.button):focus::after {
	transform: scaleX(1);
	transform-origin: left;
}

div.flex {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	align-items: center;
}
div.flex > * {
	margin-inline: 1rem;
}

a.button {
	display: flex;
	background: var(--clr-button);
	border-radius: 0.2rem;
	box-shadow: 0 0 0.5rem var(--clr-shadow);
	color: var(--clr-text);
	font-size: 1.2rem;
	font-weight: bold;
	font-variant: small-caps;
	padding: 0.5em 1em;
	transition: background 0.1s ease;
	align-items: center;
}
a.button, a.button:hover, a.button:active {
	text-decoration: none;
}
a.button:hover {
	background: var(--clr-button-hover);
}

.color a:not(:has(img)):not(.button) {
	color: var(--clr-link2) !important;
}
.color a:not(:has(img)):not(.button):focus,
.color a:not(:has(img)):not(.button):hover {
	color: var(--clr-link2-active) !important;
}
.color a:not(:has(img)):not(.button)::after {
	background: var(--clr-link2-active) !important;
}
.color a.button {
	background: var(--clr-button-color);
}
.color a.button:hover {
	background: var(--clr-button-color-hover);
}

a.button.coffee {
	padding: 1em;
	background: var(--clr-button-coffee);
}
a.button.coffee:hover {
	background: var(--clr-button-coffee-hover);
}
a.button.coffee img {
	height: 3em;
}

a.button .material-symbols-outlined {
	font-size: 4.5em;
	margin-top: -0.2em;
}
a.button.fancy div {
	margin-left: 0.5em;
	padding-inline: 0.3em;
}

/*
 * Navigation
 */

nav {
	display: flex;
	flex-wrap: wrap;
	flex-direction: row;
	list-style: none;
	column-gap: 1.5em;
	justify-content: center;
	margin-top: 1em;
	margin-bottom: 1.25em;
}

/*
 * Features
 */

/* Header & featured content */
header {
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: column;
	margin-top: 2em;
	padding-top: 2em;
	z-index: 5;
}
#logo {
	flex-grow: 1;
	font-family: 'JetBrains Mono', monospace;
	font-size: min(126px, 21vw);
	font-weight: 200;
	font-style: italic;
	letter-spacing: -0.1em;
	color: var(--clr-text);
	text-align: center;
	margin-left: -15px;
}
#logo img {
	width: min(36vw, 216px);
	vertical-align: middle;
	margin-right: -0.2em;
}
/* ... */

